# screen-reporter

./: .gitignore
app/: api_client.py  build_dmg.sh  com.activitytracker.daemon.plist  com.daemon.app.plist  config.py  daemon.py  pyproject.toml  screenshot.py  setup.py
server/: .coverage  Dockerfile  Makefile  data.db  docker-compose.yml  main.py  models.py  prompt.md  pyproject.toml  usecase.py  utils.py
server/tests/: test_login.py  test_process_image.py
